Tidy swagger and routes
