# constant/route/routes.go
@@ -16,8 +16,8 @@ const UserVerifyForgotOTP = UserForgotPassword + "/verify-otp"
 const UserResetPassword = UserPath + "/reset-password"
 const UserProfile = UserPath + "/profile"
 const UserUpdateAvatar = UserPath + "/avatar"
-const UserRequestOTP = UserPath + "/request-otp"
-const UserUpdatePassword = UserPath + "/update-password"
+const UserRequestUpdateOTP = UserUpdate + "/request-otp"
+const UserUpdatePassword = UserUpdate + "/password"
 
 const AdminPath = BasePath + "/admin"
 const AdminLogin = AdminPath + "/login"
